# qml

./: CMakeLists.txt  README.md  THEME_GUIDE.md  appicon.rc  main.cpp  main.qml
model/: AlbumModel.cpp  AlbumModel.h  MediaList.cpp  MediaList.h  PlayerModel.cpp  PlayerModel.h  SongModel.cpp  SongModel.h
models/: AlbumModel.h
qml/: AlbumsList.qml  NowPlayingView.qml  SongsList.qml
theme/: Theme.qml
view/: AlbumsList.qml  NowPlayingView.qml  SongsList.qml
view/components/: IconButton.qml
viewModel/: MediaList.h  ViewModel.cpp  ViewModel.h
